# cMake

./: .gitignore  CMakeLists.txt  README.md
course/: 005.cmake  007.cmake
course/008/: CMakeLists.txt
src/: CMakeLists.txt  cmake.cpp
src/math/: CMakeLists.txt  math.cpp  math.h
